...
                        ),
                        shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(30)),
                      ),
                      if (building.supportedIndoorFloors.isNotEmpty) ...[
                        const SizedBox(width: 16),
                        FloatingActionButton.extended(
                          key: const Key("floor_plans_button"),
                          heroTag: "indoor_floor_plans",
                          onPressed: () => _showIndoorFloorPlans(context),
                          tooltip: "Indoor Floor Plans",
                          label: const Text(
                            "Floor Plans",
                            style: TextStyle(color: Colors.white, fontSize: 16),
...
