...
    final BuildContext context, {
    required final bool showClearDestination,
    required final bool isResolvingPlace,
    required final bool isSearchingPlaces,
  }) {
    return TextField(
      key: const Key("destination_search_field"),
      controller: _destinationController,
      focusNode: _destinationFocusNode,
      onChanged: (final value) => _handleQueryChanged(value, SearchField.destination),
      onSubmitted: (final value) {
        setState(() {
          _showSuggestions = false;
...
