...
    super.dispose();
  }

  @override
  Widget build(final BuildContext context) {
    return CustomPaint(
      key: const Key("indoor_path_painter"),
      painter: IndoorPathPainter(
        floorplan: widget.floorplan,
        path: widget.path,
        debugTraversalNodes: widget.debugTraversalNodes,
        pulseAnimation: _pulse,
      ),
...
